--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.14.2",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.multiplayer.playmode": "1.6.1",
     "com.unity.multiplayer.tools": "2.2.6",
     "com.unity.netcode.gameobjects": "2.7.0",
     "com.unity.probuilder": "6.0.7",
